# postmark-email-agents

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/apis/v1/: __init__.py
app/apis/v1/actionables/: __init__.py  actionables.py
app/apis/v1/emails/: __init__.py  emails.py
app/apis/v1/health/: health.py
app/apis/v1/users/: users.py
app/apis/v1/webhook/: __init__.py  webhook.py
app/core/: config.py  dependencies.py
app/core/db/: __init__.py  database.py  repository.py  utils.py
app/core/logger/: __init__.py  logger.py
app/core/middleware/: __init__.py  auth.py
app/core/utils/response/: __init__.py  response.py
app/modules/: __init__.py
app/modules/actionables/: __init__.py  actionables.py  services.py
app/modules/actionables/agents/: __init__.py  agent_service.py  calendar_agent.py  notes_agent.py  shopping_agent.py
app/modules/actionables/api/: __init__.py  actionables.py
app/modules/actionables/calendar/: __init__.py  db.py  main.py  repo.py  tools.py
app/modules/actionables/models/: __init__.py  api.py
app/modules/actionables/notes/: __init__.py  db.py  main.py  repo.py  tools.py
app/modules/actionables/shopping/: __init__.py  db.py  main.py  repo.py  tools.py
app/modules/emails/: __init__.py  get_emails.py  process_webhook.py  thread_service.py
app/modules/emails/models/: __init__.py  db.py  request.py  response.py
app/modules/users/: __init__.py  db.py  repository.py  send_emails.py  services.py  users.py
app/modules/users/models/: __init__.py  requests.py  response.py
migrations/: env.py
(+19 files in other folders)
